--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         * SITE_NAME：站点名称
         */
         window.GLOBAL_CONFIG = {
-            SCF_GATEWAY: "https://floral-fire-3c7c.lein.workers.dev/",
+            SCF_GATEWAY: "https://od.lein.workers.dev",
             SITE_NAME: "FODI",
             IS_CF: true
         };
