--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         */
         window.GLOBAL_CONFIG = {
             SCF_GATEWAY: "https://od.lein.workers.dev",
-            SITE_NAME: "FODI",
+            SITE_NAME: "Lein's OneDrive(wudi-yesyesme)",
             IS_CF: true
         };
         if (window.GLOBAL_CONFIG.SCF_GATEWAY.indexOf('workers') === -1) {
